# Autocar_2024

./: README.md  requirements.txt
dead_reckoning_test/: dead_reckoning_0607.py  dead_reckoning_0607_no_imu.py  encoder_to_vel.py  for_dr_test.py
erp_control/: CMakeLists.txt  package.xml
erp_control/src/: erp42_ros.py  final_speed_pub.py
global_path_planning/launch/: global_map.mvc  global_path_planning.launch
global_path_planning/osm_files/: hitech2_INTERSECTION_LINK.osm  hitech2_LINK.osm  hitech_MISSION.osm
global_path_planning/src/: global_path_planning.py  global_path_planning_ros.py  keyboard_input.py  osm_handler.py
localization/src/: dead_reckoning.py  localization.py  localization_0923.py  localization_1002.py  localization_backup.py  localization_kcity_1012.py  localization_sub.py  localization_sub_v4f.py  localization_v3kcity.py  speed_odom_pub.py  stopline_detect.py  wgs84_transformer.py
path_tracking/src/: path_tracking.py  path_tracking_sub_v3a.py
path_tracking/src/control/: longitunial_control.py  stanley.py  stanley_v4.py
perception/ground_removal/: CMakeLists.txt  package.xml
perception/ground_removal/src/: ground_removal.cpp
perception/sensor_fusion/src/: sensor_fusion.py  sensor_fusion_handler_v3kcity.py
perception/yolo_detection/src/: delivery_detect.py  delivery_detect_v3kcity.py  trafficlight.py
planning/global_path_planning/osm_files/: Hitech_ParkingLot.osm  KCITY_INTERSECTION_LINK_MAIN.osm  KCITY_INTERSECTION_LINK_MORAI.osm  (+24 more)
util/launch/: util.launch
util/src/: autocar_tf.py  autocar_tf_1015첫실험.py  topic_remap.py
(+32 files in other folders)
